First commit - Added Repos - Added First unit tests - Added First end points

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#PostGreSql DataBase For Production
 spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant
 spring.datasource.username=postgres
 spring.datasource.password=admin
