--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run:
-        docker login -u timdemoor122 -p 2XKxfz.S
+        docker login -u timdemoor122 -p 2XKxfz.S1
     - name: Build docker image
       run: docker build . --file dockerfile --tag image:$(date +%s)
       
